--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/Makefile
 /Makefile.in
 /aclocal.m4
 /autom4te.cache/
@@ -6,7 +5,9 @@
 /configure
 /install-sh
 /stamp-h?
+Makefile
 .deps/
 .dirstamp
+/src/cppsme
 *.o
 *~
