Added frogger example

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,6 @@ bin_PROGRAMS = cppsme
 
 #AM_CXXFLAGS = -std=c++11
 
-cppsme_SOURCES = sme.cc sme.h adder.cc simplecpu.cc main.cc
-#cppsme_LOADD = $(INTI_LIBS)
+cppsme_SOURCES = sme.cc sme.h adder.cc simplecpu.cc main.cc frogger.cc
+
+cppsme_LDADD = @CURSES_LIB@
