--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ AX_CHECK_COMPILE_FLAG([-pedantic], [CXXFLAGS="$CXXFLAGS -pedantic"], [], [])
 
 AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
 
+AX_WITH_CURSES
+
 #INTI_REQUIRED_VERSION=1.0.7
 #PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
 AC_SUBST(INTI_CFLAGS)
