Build core as proper library and move tests into separate dir and build as separate binaries.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,38 @@ Makefile
 .deps/
 .dirstamp
 /src/cppsme
+/test/adder
 callgrind.out*
 *.o
 *~
+/config/
+m4/lt*
+m4/libtool.m4
+aclocal.m4
+ltmain.sh
+app.info
+compile
+config.h
+config.h.in
+config.log
+config.status
+configure
+configure.scan
+coverage_report
+depcomp
+libtool
+missing
+stamp-h1
+*~
+*.html
+*.log
+*.o
+*.la
+*.so*
+*.a
+.libs
+*.tar*
+*.zip
+*.lo
+*.gcno
+*.gcda
