Example of generated testcases

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,6 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIRS([m4])
 
 AC_PROG_CXX
-#AC_PROG_PYTHON
 
 # Enable compiler warnings/errors
 AX_CHECK_COMPILE_FLAG([-Wall], [CXXFLAGS="$CXXFLAGS -Wall"], [], [])
@@ -19,6 +18,7 @@ AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
 LT_INIT
 
 AX_WITH_CURSES
+AM_PATH_PYTHON([3.4])
 
 #INTI_REQUIRED_VERSION=1.0.7
 #PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
