Compile libc and libstdc++ statically Grid has old versions

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,9 +2,11 @@ noinst_PROGRAMS = adder ring sleeping_ring ring_dynamic validate
 EXTRA_DISt = ring.py
 CLEANFILES = ring.cc
 
+static_gcc = -static-libstdc++ -static-libgcc
+
 adder_CPPFLAGS = -I../src
 adder_LDADD = ../src/libsme.la
-adder_LDFLAGS = -static
+adder_LDFLAGS = -static $(static_gcc)
 adder_SOURCES = adder.cc
 
 #frogger_CPPFLAGS = -I../src
@@ -20,22 +22,22 @@ adder_SOURCES = adder.cc
 # var-tracking makes the build take forever
 ring_CPPFLAGS = -I../src -fno-var-tracking
 ring_LDADD = ../src/libsme.la
-ring_LDFLAGS = -static
+ring_LDFLAGS = -static $(static_gcc)
 ring_SOURCES = ring.cc
 
 sleeping_ring_CPPFLAGS = -I../src -fno-var-tracking
 sleeping_ring_LDADD = ../src/libsme.la
-sleeping_ring_LDFLAGS = -static
+sleeping_ring_LDFLAGS = -static $(static_gcc)
 sleeping_ring_SOURCES = sleeping_ring.cc
 
 ring_dynamic_CPPFLAGS = -I../src -fno-var-tracking
 ring_dynamic_LDADD = ../src/libsme.la
-ring_dynamic_LDFLAGS = -static
+ring_dynamic_LDFLAGS = -static $(static_gcc)
 ring_dynamic_SOURCES = ring_dynamic.cc
 
 validate_CPPFLAGS = -I../src -fno-var-tracking
 validate_LDADD = ../src/libsme.la
-validate_LDFLAGS = -static
+validate_LDFLAGS = -static $(static_gcc)
 validate_SOURCES = validate.cc
 
 ring.cc: ring.py
