--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = adder ring sleeping_ring ring_dynamic validate
+noinst_PROGRAMS = adder ring sleeping_ring ring_dynamic validate ring_heavy ring_uneven
 EXTRA_DISt = ring.py
 CLEANFILES = ring.cc
 
@@ -30,6 +30,11 @@ sleeping_ring_LDADD = ../src/libsme.la
 sleeping_ring_LDFLAGS = -static $(static_gcc)
 sleeping_ring_SOURCES = sleeping_ring.cc
 
+ring_heavy_CPPFLAGS = -I../src -fno-var-tracking
+ring_heavy_LDADD = ../src/libsme.la
+ring_heavy_LDFLAGS = -static $(static_gcc)
+ring_heavy_SOURCES = ring_heavy.cc
+
 ring_dynamic_CPPFLAGS = -I../src -fno-var-tracking
 ring_dynamic_LDADD = ../src/libsme.la
 ring_dynamic_LDFLAGS = -static $(static_gcc)
@@ -39,6 +44,11 @@ validate_CPPFLAGS = -I../src -fno-var-tracking
 validate_LDADD = ../src/libsme.la
 validate_LDFLAGS = -static $(static_gcc)
 validate_SOURCES = validate.cc
+
+ring_uneven_CPPFLAGS = -I../src -fno-var-tracking
+ring_uneven_LDADD = ../src/libsme.la
+ring_uneven_LDFLAGS = -static $(static_gcc)
+ring_uneven_SOURCES = ring_uneven.cc
 
 ring.cc: ring.py
 	$(PYTHON) $< > $@
