--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@ Makefile
 .deps/
 .dirstamp
 /src/cppsme
-/test/adder
-/test/ring
-/test/sleeping_ring
-/test/dynamic_ring
+/test/*
+!/test/*.cc
+!/test/*.h
 /test/ring.cc
 callgrind.out*
 *.o
