Misc built system fixes. Properly make building test programs optional

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,3 +9,5 @@ libinclude_HEADERS = sme.h cqueue.h bqueue.h threading.h runner.h queue_common.h
 
 libsme_la_SOURCES = sme.cc sme.h threading.cc threading.h runner.cc runner.h cqueue.cc cqueue.h bqueue.cc bqueue.h queue_common.h
 # frogger.cc simplecpu.cc adder.cc
+
+CLEANFILES = libsme.pc.in libsme.pc libsme-uninstalled.pc libsme-uninstalled.sh
